[package]
name = "stamp-rs"
version = "0.3.2"
authors = ["tylervipond <tylervipond@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "stamp_rs"
path = "src/lib.rs"

[[bin]]
name = "apprentice"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.93", optional = true, features = ["serde_derive"] }
